--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,7 @@
       <param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
+    <multipart-config/>
   </servlet>
   <servlet-mapping>
     <servlet-name>appServlet</servlet-name>
@@ -33,15 +34,15 @@
     <servlet-name>appServlet</servlet-name>
   </filter-mapping>
   <filter>
-    <display-name>CheckLoginFilter</display-name>
-    <filter-name>CheckLoginFilter</filter-name>
-    <filter-class>org.zerock.filter.CheckLoginFilter</filter-class>
+    <display-name>CheckLogInFilter</display-name>
+    <filter-name>CheckLogInFilter</filter-name>
+    <filter-class>org.zerock.filter.CheckLogInFilter</filter-class>
   </filter>
   <filter-mapping>
-    <filter-name>CheckLoginFilter</filter-name>
+    <filter-name>CheckLogInFilter</filter-name>
     <url-pattern>/member/list</url-pattern>
     <url-pattern>/member/remove</url-pattern>
+    <url-pattern>/member/info</url-pattern>
     <url-pattern>/board/register</url-pattern>
   </filter-mapping>
-
 </web-app>
